fixed narrow annoucement overlap - fix #2081

--- a/main/c2g/static/css/core/body.css
+++ b/main/c2g/static/css/core/body.css
@@ -391,7 +391,7 @@ small.date {
     -khtml-border-radius: 5px;
     -o-border-radius: 5px;
     position:relative;
-    clear:left;
+    clear: both;
 }
 .announcement p {
     margin-bottom:0;
